fixed hint for signup, fixed testimonial sizing for mobile, removed x-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
     --base: #A8D1D1;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
 }
@@ -567,6 +574,7 @@ h6,
 /*** Testimonial ***/
 .testimonial-carousel {
     position: relative;
+    padding: 0 10px;
 }
 
 .testimonial-carousel .owl-item .testimonial-item {
@@ -575,6 +583,35 @@ h6,
     border-radius: 10px;
     box-shadow: 0 0 45px rgba(0, 0, 0, .07);
     transition: .5s;
+    margin: 15px 10px;
+}
+
+@media (max-width: 767px) {
+    .testimonial-carousel .owl-item .testimonial-item {
+        padding: 15px;
+        margin: 10px;
+        width: calc(100% - 20px);
+    }
+    
+    .testimonial-carousel .owl-item .testimonial-item h5 {
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+    }
+    
+    .testimonial-carousel .owl-item .testimonial-item p {
+        font-size: 0.875rem;
+        line-height: 1.4;
+    }
+
+    #testimonials .container {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    #testimonials .container > .row {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 .testimonial-carousel .owl-item.center .testimonial-item {
@@ -755,25 +792,35 @@ h6,
 }
 
 @media (max-width: 767px) {
+    html,
     body {
         overflow-x: hidden;
+        width: 100%;
+        position: relative;
     }
 
     .container,
     .container-fluid {
+        width: 100%;
         max-width: 100%;
         padding-left: 15px;
         padding-right: 15px;
+        overflow-x: hidden;
     }
 
     .row {
         margin-left: -15px;
         margin-right: -15px;
+        width: 100%;
     }
 
     [class*="col-"] {
         padding-left: 15px;
         padding-right: 15px;
+    }
+
+    .screenshot-carousel {
+        margin-right: 0;
     }
 }
 
@@ -969,48 +1016,52 @@ h6,
 }
 
 .container {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 100%;
 }
 
 @media (min-width: 992px) {
     .container {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 30px;
+        padding-right: 30px;
         max-width: 100%;
     }
 }
 
 @media (min-width: 1200px) {
     .container {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 40px;
+        padding-right: 40px;
         max-width: 100%;
     }
 }
 
 .container-fluid {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Add padding to inner content containers */
 .container > .row {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 @media (min-width: 992px) {
     .container > .row {
-        padding-left: 4rem;
-        padding-right: 4rem;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
 
 @media (min-width: 1200px) {
     .container > .row {
-        padding-left: 6rem;
-        padding-right: 6rem;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
